/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-08-12 02:48 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/common/hbver.c
    ! work around to prevent INT32 to be redefined in jmorecfg.h

2012-08-11 15:08 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/pdflite/tiff/tif_ojpeg.c
  * contrib/pdflite/tiff/tif_unix.c
    ! fixed to compile under DMC

  * contrib/pdflite/tiff/tif_luv.c
    ! fixed to compile under POCC

  * contrib/jpeg/jdhuff.c
    + extern "C" for jpeg_reset_huff_decode()

2012-08-11 13:28 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/common.mak
  * winmake/compile.mak
    ! missing from previous commit

2012-08-11 12:45 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/tiff/tiff.h
    + include "hbdefs.h" for INT64 and UINT64

  * contrib/jpeg/jdhuff.c
    + function jpeg_reset_huff_decode() for PDFLite compatibility

  * contrib/pdflite/hbpdflib.c
    + enabled support for TIFF format

  * contrib/pdflite/tests/img2pdf.prg
  * contrib/pdflite/include/p_image.h
  * contrib/pdflite/pdflib/p_tiff.c
  + contrib/pdflite/tests/mytiff.tiff
  + contrib/pdflite/tiff/*.c
  + contrib/pdflite/include/port.h
  + contrib/pdflite/include/pdflite_*.h
  * winmake/common.mak
  * winmake/compile.mak
    ! add back proprietary version of tiff for pdflite

  * winmake/makefile.bc
    ! increase library page size to 256

2012-08-11 06:27 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * ChangeLog
    ! correction on my note vis:
      2012-08-10 08:27 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
      RE: TODO -> MinGW : GPF when loading PNG and JPG.
      This was wrong. No GPF occurs.

2012-08-10 10:43 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/common/hbver.c
    ! jpeg lib version using integer
